--- a/cuppytrail/resources/localization/cuppytrail-locales_en.properties
+++ b/cuppytrail/resources/localization/cuppytrail-locales_en.properties
@@ -52,3 +52,6 @@ type.stadiumaccess.rail.name=rail
 type.stadiumaccess.plane.name=plane
 
 
+### Localization for new attributes of type MatchBet
+type.matchbet.matchscore.name=Bet Score
+type.matchbet.matchscore.description=
